refactor: 인증 메일 URL 상수화 및 html 양식 초기화 로직 변경

--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -15,7 +15,7 @@
             아래 <b style="color: #02b875">'메일 인증'</b> 버튼을 클릭하여 인증을 완료해 주세요.<br />
             감사합니다.
         </p>
-        <a style="color: #FFF; text-decoration: none; text-align: center;" href="http://localhost:8080/api/ROLE/check-mail-token?email=EMAIL&token=TOKEN" target="_blank">
+        <a style="color: #FFF; text-decoration: none; text-align: center;" href="CHECK_MAIL_TOKEN_URL" target="_blank">
             <p style="display: inline-block; width: 210px; height: 45px; margin: 30px 5px 40px; background: #02b875; line-height: 45px; vertical-align: middle; font-size: 16px;">
                 메일 인증
             </p>
